// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompliantSystems expect to render with unsupported hosts 1`] = `
<Fragment>
  <Progress
    aria-label="Compliant systems"
    aria-labelledby={null}
    className=""
    id=""
    isTitleTruncated={false}
    label={null}
    max={100}
    measureLocation="outside"
    min={0}
    size={null}
    title=""
    tooltipPosition="top"
    value={90}
    valueText={null}
    variant={null}
  />
  <GreySmallText>
    9 of 10 systems 
    <UnsupportedSSGVersion
      style={
        Object {
          "marginLeft": ".5em",
        }
      }
      tooltipText="Insights cannot provide a compliance score for systems running an unsupported version of the SSG at the time this report was created, as the SSG version was not supported by RHEL."
    >
      <strong
        className="ins-c-warning-text"
      >
        42
         unsupported
      </strong>
    </UnsupportedSSGVersion>
  </GreySmallText>
</Fragment>
`;

exports[`CompliantSystems expect to render without error 1`] = `
<Fragment>
  <Progress
    aria-label="Compliant systems"
    aria-labelledby={null}
    className=""
    id=""
    isTitleTruncated={false}
    label={null}
    max={100}
    measureLocation="outside"
    min={0}
    size={null}
    title=""
    tooltipPosition="top"
    value={90}
    valueText={null}
    variant={null}
  />
  <GreySmallText>
    9 of 10 systems 
  </GreySmallText>
</Fragment>
`;

exports[`Name expect to render without error 1`] = `
<TextContent>
  <LinkWithPermission
    style={
      Object {
        "marginRight": ".5rem",
      }
    }
    to="/reports/ID"
  >
    POLICY_NAME
  </LinkWithPermission>
  <PolicyPopover
    position="right"
    profile={
      Object {
        "id": "ID",
        "name": "NAME",
        "policy": Object {
          "id": "POLICY_ID",
          "name": "POLICY_NAME",
        },
        "policyType": "POLICY_TYPE",
      }
    }
  />
  <GreySmallText>
    POLICY_TYPE
  </GreySmallText>
</TextContent>
`;

exports[`OperatingSystem expect to render with SSG version 1`] = `
<Fragment>
  RHEL 
  7
  <Text>
    <GreySmallText>
      SSG: 1.2.3
    </GreySmallText>
  </Text>
</Fragment>
`;

exports[`OperatingSystem expect to render with unsupported warning 1`] = `
<Fragment>
  RHEL 
  7
  <Text>
    <GreySmallText>
      <UnsupportedSSGVersion>
        SSG: 1.2.3
      </UnsupportedSSGVersion>
    </GreySmallText>
  </Text>
</Fragment>
`;

exports[`OperatingSystem expect to render without error 1`] = `
<Fragment>
  RHEL 
  7
</Fragment>
`;
